# tapse

./: .env.example  .gitignore  Cargo.toml  README.md  sqlx-data.json
.github/workflows/: release.yml
frontend/: index.html  package.json  pnpm-lock.yaml  postcss.config.js  snowpack.config.js  svelte.config.js  tsconfig.json  vite.config.ts  windi.config.js  windi.config.ts
frontend/public/: index.html  style.css
frontend/src/: App.svelte  Models.svelte  store.ts
frontend/src/components/: Chat.svelte  Files.svelte  Footer.svelte  ForumView.svelte  Login.svelte  Navbar.svelte  RoomBox.svelte
frontend/src/components/files/: Pagination.svelte  SingleFile.svelte  UploadForm.svelte
frontend/src/components/settings/: Settings.svelte  SettingsButton.svelte
frontend/src/stores/: file.ts  message.ts  room.ts  session.ts  ws.ts
migrations/: 20210301183313_initial.sql
src/: db.rs  errors.rs  handlers.rs  main.rs  models.rs  websocket.rs
src/db/: file.rs  message.rs  mod.rs  room.rs
src/handlers/: file.rs  message.rs  room.rs  session.rs
src/websocket/: events.rs  mod.rs
