[package]
authors = ["fluunke <flrk@tuta.io>"]
edition = "2018"
name = "tapse"
version = "0.0.1"

[dependencies]
tide = "0.16"
tide-websockets = "0.4"
multer = {version = "2.0"}
broadcaster = "1.0"
http-types = "2.11"

sanitize-filename = "0.3"
rust-embed = "6.0"
urlencoding = "2.1.0"

thiserror = "1.0"

bytes = "1.0"
futures = "0.3"
mime_guess = "2.0"
serde_json = "1.0"

nanoid = "0.4"
clap = "3.0.0-beta.2"

[dependencies.async-std]
features = ["attributes"]
version = "1.9"

[dependencies.chrono]
features = ["serde", "unstable-locales"]
version = "0.4"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.sqlx]
features = ["runtime-async-std-rustls", "sqlite", "macros", "chrono", "offline"]
version = "0.5"
