[package]
authors = ["fluunke <flrk@tuta.io>"]
edition = "2018"
name = "tapse"
version = "0.0.2"

[dependencies]
clap = { version = "3.1.15", features = ["derive"] }
dotenv = "0.15.0"

tokio = { version = "1.18.1", features = ["full"] }
axum = { version = "0.5.4", features = ["headers", "multipart", "ws"] }
axum-extra = { version = "0.3.0", features = ["cookie"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
async-session = "3.0.0"
tower-http = { version = "0.3.2", features = ["cors","trace","compression-full" ] }

broadcaster = "1.0.0"
futures = "0.3.21"
nanoid = "0.4"

thiserror = "1.0.31"

sanitize-filename = "0.3.0"
rust-embed = "6.4.0"

mime_guess = "2.0.4"
serde_json = "1.0.81"

[dependencies.chrono]
features = ["serde", "unstable-locales"]
version = "0.4.19"

[dependencies.serde]
features = ["derive"]
version = "1.0.137"

[dependencies.sqlx]
features = ["runtime-tokio-native-tls", "sqlite", "macros", "chrono", "offline"]
version = "0.5.13"
